<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_matching">

    <fragment
        android:id="@+id/navigation_matching"
        android:name="com.example.lets_findus.ui.matching.MatchingFragment"
        android:label="@string/title_matching"
        tools:layout="@layout/fragment_matching" >
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.lets_findus.ui.favourites.FavouritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favourites" >
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lets_findus.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>
</navigation>