<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/match_menu">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_round_search_24"
            android:title="@string/search"
            app:showAsAction="always|collapseActionView"/>
        <item
            android:id="@+id/filter_match"
            android:icon="@drawable/ic_round_filter_list_24"
            android:title="@string/filter"
            app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/fav_menu">
        <item
            android:id="@+id/filter_fav"
            android:icon="@drawable/ic_round_filter_list_24"
            android:title="@string/filter"
            app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/prof_menu">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/settings"
            app:showAsAction="ifRoom"/>
    </group>
</menu>