<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="@color/cardview_light_background">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/normal_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.profile.ProfileFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/circularImageView"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="8dp"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="3dp"
                        app:civ_shadow="true"
                        app:civ_shadow_color="#b0bec5"
                        app:civ_shadow_radius="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:transitionName="@string/image_transition"/>

                    <TextView
                        android:id="@+id/nickname_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/nickname"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/circularImageView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/obbligatory_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_card_view">

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/nickname_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/nickname_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/sex_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nickname_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/sex_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/year_birth_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sex_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/year_birth_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/other_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/obbligatory_data">

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/name_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/surname_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/surname_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/description_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surname_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/description_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/facebook_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/facebook_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/instagram_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/facebook_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/instagram_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/linkedin_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instagram_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/linkedin_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linkedin_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/email_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/phone_number_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/phone_number_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/birth_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/birth_date_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

                <uk.co.onemandan.materialtextview.MaterialTextView
                    android:id="@+id/other_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birth_date_tv"
                    app:mtv_contentTextColor="@color/black"
                    app:mtv_labelText="@string/other_tv_label"
                    app:mtv_labelTextColor="@color/colorPrimaryDark" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>